# app/controller/menu.go
@@ -15,7 +15,7 @@ import (
 // @Security ApiKeyAuth
 // @accept application/json
 // @Produce application/json
-// @Param data body dto.CreateMenu true ""
+// @Param data body dto.CreateMenu true "菜单名"
 // @Success 200 {string} string "{"success":true,"data":{},"msg":"创建成功"}"
 // @Router /menu/create [post]
 func CreateMenu(c *gin.Context) {
@@ -23,7 +23,7 @@ func CreateMenu(c *gin.Context) {
 
 	// 校验参数
 	if err := c.ShouldBind(&req); err != nil {
-		response.FailWithMessage("参数验证失败", c)
+		response.FailWithMessage(c, "参数验证失败")
 		c.Abort()
 		return
 	}
@@ -42,9 +42,9 @@ func CreateMenu(c *gin.Context) {
 		Icon:        req.Icon,
 	}
 	if err := global.DB.CreateMenu(&menu); err != nil {
-		response.FailWithMessage("创建菜单失败", c)
+		response.FailWithMessage(c, "创建菜单失败")
 	} else {
-		response.OkWithMessage("创建成功", c)
+		response.OkWithMessage(c, "创建成功")
 	}
 }
 
@@ -60,16 +60,16 @@ func DeleteMenu(c *gin.Context) {
 	var req dto.DeleteMenu
 	// 校验参数
 	if err := c.ShouldBind(&req); err != nil {
-		response.FailWithMessage("参数验证失败", c)
+		response.FailWithMessage(c, "参数验证失败")
 		c.Abort()
 		return
 	}
 
 	if err := service.DeleteByIds(entity.Menu{}, req.Ids); err != nil {
 		global.Logger.Error("删除失败!", zap.Any("err", err))
-		response.FailWithMessage("删除失败", c)
+		response.FailWithMessage(c, "删除失败")
 	} else {
-		response.OkWithMessage("删除成功", c)
+		response.OkWithMessage(c, "删除成功")
 	}
 }
 
@@ -84,21 +84,21 @@ func GetMenuTree(c *gin.Context) {
 	var req dto.SearchMenu
 	// 校验参数
 	if err := c.ShouldBind(&req); err != nil {
-		response.FailWithMessage("参数验证失败", c)
+		response.FailWithMessage(c, "参数验证失败")
 		c.Abort()
 		return
 	}
 
 	if total, list, err := service.GetMenuTree(); err != nil {
 		global.Logger.Error("获取失败!", zap.Any("err", err))
-		response.FailWithMessage("获取失败", c)
+		response.FailWithMessage(c, "获取失败")
 	} else {
-		response.OkWithDetailed(response.PageResult{
+		response.OkWithDetailed(c, response.PageResult{
 			List:  list,
 			Total: int64(total),
 			Page:  req.Page,
 			Size:  req.Size,
-		}, "获取成功", c)
+		}, "获取成功")
 	}
 }
 
@@ -107,14 +107,14 @@ func GetMenuTree(c *gin.Context) {
 // @Security ApiKeyAuth
 // @accept application/json
 // @Produce application/json
-// @Param data body dto.DetailMenu true ""
+// @Param data body dto.DetailMenu true "id"
 // @Success 200 {string} string "{"success":true,"data":{},"msg":"获取成功"}"
 // @Router /menu/detail [post]
 func GetMenuById(c *gin.Context) {
 	var req dto.DetailMenu
 	// 校验参数
 	if err := c.ShouldBind(&req); err != nil {
-		response.FailWithMessage("参数验证失败", c)
+		response.FailWithMessage(c, "参数验证失败")
 		c.Abort()
 		return
 	}
@@ -123,9 +123,9 @@ func GetMenuById(c *gin.Context) {
 	err := service.DetailById(&api, req.Id)
 	if err != nil {
 		global.Logger.Error("获取失败!", zap.Any("err", err))
-		response.FailWithMessage("获取失败", c)
+		response.FailWithMessage(c, "获取失败")
 	} else {
-		response.OkWithData(api, c)
+		response.OkWithData(c, api)
 	}
 }
 
@@ -134,14 +134,14 @@ func GetMenuById(c *gin.Context) {
 // @Security ApiKeyAuth
 // @accept application/json
 // @Produce application/json
-// @Param data body dto.UpdateApi true "api路径, api中文描述, api组, 方法"
+// @Param data body dto.UpdateApi true "菜单名"
 // @Success 200 {string} string "{"success":true,"data":{},"msg":"修改成功"}"
 // @Router /menu/update [post]
 func UpdateMenu(c *gin.Context) {
 	var req dto.UpdateMenu
 	// 校验参数
 	if err := c.ShouldBind(&req); err != nil {
-		response.FailWithMessage("参数验证失败", c)
+		response.FailWithMessage(c, "参数验证失败")
 		c.Abort()
 		return
 	}
@@ -163,9 +163,9 @@ func UpdateMenu(c *gin.Context) {
 
 	if err := service.UpdateById(&menu, &entity.Menu{}, req.Id); err != nil {
 		global.Logger.Error("修改失败!", zap.Any("err", err))
-		response.FailWithMessage("修改失败", c)
+		response.FailWithMessage(c, "修改失败")
 	} else {
-		response.OkWithMessage("修改成功", c)
+		response.OkWithMessage(c, "修改成功")
 	}
 }
 
@@ -179,8 +179,8 @@ func UpdateMenu(c *gin.Context) {
 func GetAllMenus(c *gin.Context) {
 	if menus, err := global.DB.AllMenus(); err != nil {
 		global.Logger.Error("获取失败!", zap.Any("err", err))
-		response.FailWithMessage("获取失败", c)
+		response.FailWithMessage(c, "获取失败")
 	} else {
-		response.OkWithDetailed(menus, "获取成功", c)
+		response.OkWithDetailed(c, menus, "获取成功")
 	}
 }
